fix(review): [major] remove optional Kafka fallback from promotion handler
The handler_promotion.py was implementing an optional Kafka pattern where
producer=None triggered a direct SQL UPDATE fallback. This directly
contradicts the Kafka-required infrastructure invariant.

Changes:
- Make producer a required parameter (remove | None and = None default)
- Remove the direct SQL UPDATE fallback code path (~55 lines)
- Delete SQL_PROMOTE_PATTERN constant (only used in fallback path)
- Remove parse_pg_status_count import (only used in fallback path)
- Remove pattern_repository from promote_pattern (only used in fallback)
- Update module docstring from "Kafka Publisher Optionality" to required
- Fix contract.yaml io_operations action to remove "or direct update" text

--- a/src/omniintelligence/nodes/node_pattern_promotion_effect/contract.yaml
+++ b/src/omniintelligence/nodes/node_pattern_promotion_effect/contract.yaml
@@ -93,7 +93,7 @@ handler_routing:
       actions:
         - "fetch provisional patterns from database"
         - "evaluate promotion gates (injection count, success rate, failure streak)"
-        - "emit lifecycle events or direct update for eligible patterns"
+        - "emit lifecycle events to Kafka for eligible patterns"
         - "return aggregated promotion results"
 
     # Promote single pattern - used internally by check_and_promote
