fix(review): [major] correct __init__ invariant, document repository=None late-failure, fix storage contract class_name, add repository=None test

--- a/src/omniintelligence/nodes/node_pattern_storage_effect/contract.yaml
+++ b/src/omniintelligence/nodes/node_pattern_storage_effect/contract.yaml
@@ -301,9 +301,9 @@ dependencies:
 
   - name: "kafka_producer"
     type: "protocol"
-    class_name: "ProtocolKafkaProducer"
-    module: "omnibase_infra.protocols.protocol_kafka_producer"
-    description: "Kafka producer for emitting pattern storage events. Required infrastructure per ONEX
+    class_name: "ProtocolKafkaPublisher"
+    module: "omniintelligence.protocols"
+    description: "Kafka publisher for emitting pattern storage events. Required infrastructure per ONEX
       invariant."
     required: true
 
