fix(review): [major] revert storage contract kafka_producer to required: false; add patterns_succeeded model property; fix missing producer arg in auto-promote unit tests

--- a/src/omniintelligence/nodes/node_pattern_storage_effect/contract.yaml
+++ b/src/omniintelligence/nodes/node_pattern_storage_effect/contract.yaml
@@ -303,9 +303,9 @@ dependencies:
     type: "protocol"
     class_name: "ProtocolKafkaPublisher"
     module: "omniintelligence.protocols"
-    description: "Kafka publisher for emitting pattern storage events. Required infrastructure per ONEX
-      invariant."
-    required: true
+    description: "Kafka publisher for emitting pattern storage events. Not injected into handlers — RuntimeHostProcess
+      publishes returned events to declared publish_topics automatically."
+    required: false
 
 # =============================================================================
 # ERROR HANDLING
