fix(review): [minor] enforce event model standards and sync test counts for OMN-2424
- Change ModelPatternProjectionEvent from extra="ignore" to extra="forbid" per CLAUDE.md
- Add @model_validator enforcing total_count == len(patterns) invariant
- Remove ProtocolPatternQueryStore from handler __all__; fix contract.yaml to reference canonical protocols module
- Update test counts: 8→11 subscribe topics, 8→11 routes, 6→7 handlers, add node_pattern_projection_effect to EXPECTED_NODE_DIRS

--- a/src/omniintelligence/nodes/node_pattern_projection_effect/contract.yaml
+++ b/src/omniintelligence/nodes/node_pattern_projection_effect/contract.yaml
@@ -90,7 +90,7 @@ dependencies:
   - name: "pattern_query_store"
     type: "protocol"
     class_name: "ProtocolPatternQueryStore"
-    module: "omniintelligence.nodes.node_pattern_projection_effect.handlers.handler_projection"
+    module: "omniintelligence.protocols"
     description: "Protocol for querying all validated/provisional patterns from the pattern store"
     required: true
 
