fix(review): [major/minor] wire crawl scheduler to runtime and harden invariants
- Register node_crawl_scheduler_effect in _INTELLIGENCE_EFFECT_NODE_PACKAGES so
  collect_subscribe_topics_from_contracts() discovers its topics and the node
  receives Kafka messages in production
- Add debounce-recorded assertion to test_no_publisher_returns_error, testing the
  guarantee that debounce state is persisted even when kafka_publisher is None
- Add UTC-aware timezone guard in DebounceState.is_allowed() (raises ValueError
  on naive datetime to prevent cryptic TypeError at runtime)
- Add node_tests/conftest.py + test_governance_invariants.py with 13 protocol
  conformance and behavioral tests
- Document debounce-on-error behavior in contract.yaml error_handling section

--- a/src/omniintelligence/nodes/node_crawl_scheduler_effect/contract.yaml
+++ b/src/omniintelligence/nodes/node_crawl_scheduler_effect/contract.yaml
@@ -260,6 +260,13 @@ error_handling:
       - "ConnectionError"
       - "TimeoutError"
 
+  debounce_on_error_behavior: >
+    When kafka_publisher is None (unavailable), the handler returns status=ERROR but still records the
+    debounce entry for the (source_ref, crawler_type) key BEFORE attempting the publish.  This is intentional:
+    callers who retry after receiving ERROR within the active debounce window will receive status=DEBOUNCED
+    rather than a burst of additional ERROR results.  The debounce entry is NOT cleared on error — it
+    will expire naturally via the configured window, or be reset by a document-indexed.v1 event via handle_document_indexed().
+
   error_types:
     - name: "KafkaPublishError"
       description: "Failed to publish crawl-tick.v1 to Kafka"
