--- a/pyproject.toml
+++ b/pyproject.toml
@@ -93,6 +93,8 @@ logfire = ">=0.30.0"
 structlog = ">=23.1.0"
 prometheus-client = ">=0.19.0"
 psutil = ">=5.9.0"
+# Filesystem watching
+watchdog = ">=6.0.0"
 
 [tool.poetry.plugins."onex.domain_plugins"]
 intelligence = "omniintelligence.runtime.plugin:PluginIntelligence"
@@ -113,6 +115,7 @@ dependencies = [
     "python-dotenv>=1.0.0",
     "confluent-kafka>=2.6.0",
     "tenacity>=8.2.0",
+    "watchdog>=6.0.0",
 ]
 
 [project.entry-points."onex.domain_plugins"]
@@ -172,6 +175,8 @@ core = [
     "torch>=2.0.0",
     "transformers>=4.30.0",
     "tiktoken>=0.5.0",
+    # Filesystem watching
+    "watchdog>=6.0.0",
     # Utilities
     "tenacity>=8.2.0",
     "cachetools>=5.3.0",
