fix(OMN-2430): rename OMNIINTELLIGENCE_DB_URL target from omninode_bridge to omniintelligence
The omniintelligence service must connect to its own service-specific database
('omniintelligence'), not the shared bridge database ('omninode_bridge').

- .env.example: OMNIINTELLIGENCE_DB_URL database → omniintelligence
- api/app.py: DatabaseSettings default DB name → omniintelligence
- learned_patterns.repository.yaml: connection string DB name → omniintelligence
- integration test fixtures/comments: update stale omninode_bridge references

--- a/.env.example
+++ b/.env.example
@@ -22,7 +22,7 @@
 # REQUIRED: Replace <password> with the actual PostgreSQL password.
 # Contact your team lead or check secure credential storage.
 # DO NOT commit credentials to version control.
-OMNIINTELLIGENCE_DB_URL=postgresql://postgres:<password>@192.168.86.200:5436/omninode_bridge
+OMNIINTELLIGENCE_DB_URL=postgresql://postgres:<password>@192.168.86.200:5436/omniintelligence
 
 # Connection pool settings (optional, sensible defaults provided)
 POSTGRES_MIN_POOL_SIZE=2
