fix(OMN-2386): post-merge review improvements to NodeWatchdogEffect
Apply all review fixes that landed after the WatchdogEffect feature was
merged to main via PR #139. These address correctness, thread safety, and
test coverage gaps identified during local-review:

- handler_watchdog.py: non-blocking observer join, thread-safe registry,
  precise closed-loop RuntimeError guard, move payload construction inside
  try/except, document observer_factory caller contract
- observer_factory.py: guard against loop-closed race
- registry_watchdog_effect.py: threading.Lock protection, double-start guard,
  clear registry in finally block, remove dead get_publisher/register_publisher
- model_watchdog_config.py: tuple immutability for paths fields
- model_watchdog_result.py: frozen model corrections
- enum_watchdog_status.py: remove dead enum values
- contract.yaml: fix contradiction and orphaned comment
- node_tests/: expand governance invariants, coverage for empty paths,
  schedule coverage test
- test_contract_topics.py: update count 11→13 for new nodes
- test_dispatch_handlers.py: update handler/route counts (6→8, 8→10)
- test_plugin_dispatch.py: update handler/route counts (7→9, 11→13)
- pyproject.toml: align watchdog version floor

--- a/src/omniintelligence/nodes/node_watchdog_effect/contract.yaml
+++ b/src/omniintelligence/nodes/node_watchdog_effect/contract.yaml
@@ -50,7 +50,7 @@ input_model:
 output_model:
   name: "ModelWatchdogResult"
   module: "omniintelligence.nodes.node_watchdog_effect.models"
-  description: "Result of a watchdog operation with status STARTED, STOPPED, EMITTED, SKIPPED, or ERROR"
+  description: "Result of a watchdog operation with status STARTED, STOPPED, or ERROR"
 
 # =============================================================================
 # HANDLER ROUTING
@@ -214,9 +214,9 @@ error_handling:
 
   kafka_absent_behavior: >
     When kafka_publisher is None, the observer starts and detects filesystem changes but does NOT publish
-    crawl-requested.v1 events.  This is logged at WARNING level. No events are lost — the observer continues
-    running and will emit once a publisher is registered via the registry (runtime re-wiring not currently
-    supported).
+    crawl-requested.v1 events.  This is logged at WARNING level.  Runtime re-wiring is NOT supported —
+    events will never be emitted until the observer is restarted via stop_watching() + start_watching()
+    with a valid kafka_publisher.
 
   error_types:
     - name: "ObserverStartError"
