fix(review): [major/minor] thread correlation_id through watchdog handlers; silence observer thread re-raise
- Make ModelWatchdogResult.correlation_id a required field (remove default_factory=uuid4)
- Add correlation_id param to start_watching() and stop_watching()
- Thread correlation_id through _AsyncKafkaEventHandler and _publish_crawl_requested
- Update all test call sites to pass explicit uuid4() correlation_ids
- Replace bare raise in observer thread with logger.error + coro.close() to prevent silent thread death
- Add fallback-ok comment + production warning for ImportError compat path in _schedule_watches

--- a/src/omniintelligence/nodes/node_watchdog_effect/contract.yaml
+++ b/src/omniintelligence/nodes/node_watchdog_effect/contract.yaml
@@ -100,6 +100,7 @@ io_operations:
     description: "Start OS-level filesystem observer for configured watched paths"
     input_fields:
       - config
+      - correlation_id
       - kafka_publisher
       - observer_factory
     output_fields:
@@ -112,7 +113,8 @@ io_operations:
 
   - operation: "stop_watching"
     description: "Gracefully stop the active filesystem observer"
-    input_fields: []
+    input_fields:
+      - correlation_id
     output_fields:
       - status
       - observer_type
