--- a/pyproject.toml
+++ b/pyproject.toml
@@ -151,6 +151,8 @@ core = [
     "omnibase-core>=0.18.1,<0.19.0",
     "omnibase-spi>=0.10.0,<0.11.0",
     "omnibase-infra>=0.9.0,<0.10.0",
+    "pydantic>=2.12.5,<3.0.0",
+    "pydantic-settings>=2.7.0,<3.0.0",
     # Web framework for API endpoints
     "fastapi>=0.104.0",
     "uvicorn>=0.24.0",
