--- a/src/omniintelligence/nodes/node_pattern_projection_effect/contract.yaml
+++ b/src/omniintelligence/nodes/node_pattern_projection_effect/contract.yaml
@@ -32,18 +32,17 @@ node_type: "EFFECT_GENERIC"
 # Description
 description: >
   Effect node that publishes a materialized snapshot of all validated patterns whenever a pattern lifecycle
-  event is received (pattern-promoted, pattern-deprecated, pattern-lifecycle-transitioned). Queries the
-  full validated pattern set from the pattern store, builds a ModelPatternProjectionEvent snapshot, and
-  publishes it to onex.evt.omniintelligence.pattern-projection.v1. Emission is fire-and-forget — Kafka
-  failures are logged but do not fail the handler return. correlation_id is threaded from the triggering
-  event through to the snapshot payload. #magic___^_^___line
+  event is received (pattern-promoted, pattern-lifecycle-transitioned). Queries the full validated pattern
+  set from the pattern store, builds a ModelPatternProjectionEvent snapshot, and publishes it to onex.evt.omniintelligence.pattern-projection.v1.
+  Emission is fire-and-forget — Kafka failures are logged but do not fail the handler return. correlation_id
+  is threaded from the triggering event through to the snapshot payload. #magic___^_^___line
 # =============================================================================
 # I/O MODELS
 # =============================================================================
 input_model:
   name: "dict"
   module: "builtins"
-  description: "Raw lifecycle event payload dict (pattern-promoted, pattern-deprecated, or pattern-lifecycle-transitioned)"
+  description: "Raw lifecycle event payload dict (pattern-promoted or pattern-lifecycle-transitioned)"
 
 output_model:
   name: "ModelPatternProjectionEvent"
