--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,8 @@
 #
 # QUICK START:
 # 1. Copy this file to .env:  cp .env.example .env
-# 2. Edit .env with your specific values (especially the <password> placeholder in OMNIINTELLIGENCE_DB_URL)
+# 2. Add OMNIINTELLIGENCE_DB_URL=postgresql://postgres:<password>@localhost:5436/omniintelligence to .env
+#    (this variable is not in this file; obtain credentials from your team lead)
 # 3. Run tests: pytest tests/integration -m integration -v
 #
 # IMPORTANT: The .env file contains secrets and should NEVER be committed.
