fix(OMN-2440): remove stale pattern-deprecated.v1 consumer — 30s startup timeout (#147)
* fix(OMN-2440): remove stale pattern-deprecated.v1 consumer from projection effect

The NodePatternProjectionEffect was subscribing to
onex.evt.omniintelligence.pattern-deprecated.v1 which does not exist in
Kafka, causing a 30s InfraTimeoutError on worker-1 startup.

The subscription is redundant: demotion events now flow through
NodePatternLifecycleEffect → pattern-lifecycle-transitioned.v1, which
NodePatternProjectionEffect already subscribes to.

Changes:
- Remove pattern-deprecated.v1 from node_pattern_projection_effect contract.yaml
  subscribe_topics and subscribe_topic_metadata
- Remove DISPATCH_ALIAS_PATTERN_DEPRECATED constant and
  intelligence-pattern-deprecated-projection-route from dispatch_handlers.py
- Update test counts to reflect crawl-scheduler topics added by OMN-2384
  (pre-existing test drift also fixed: 11→12 topics, 6→8 handlers, 8→10 routes)
- Add node_watchdog_effect to EXPECTED_NODE_DIRS (OMN-2386 gap)

* fix(review): [minor] update stale docstrings after pattern-deprecated.v1 removal

Remove pattern-deprecated references from contract.yaml description and
input_model fields, dispatch_handlers factory docstring, and test module
docstrings to match OMN-2440 subscriber removal.

* fix(review): [minor] remove pattern-deprecated from node.py and constants.py docstrings

Follow-up to OMN-2440: clear remaining stale references to pattern-deprecated
as a projection trigger in node.py module docstring and constants.py
TOPIC_SUFFIX_PATTERN_PROJECTION_V1 docstring.

---------

Co-authored-by: OmniNode Agent <agent@omninode.dev>

--- a/src/omniintelligence/nodes/node_pattern_projection_effect/contract.yaml
+++ b/src/omniintelligence/nodes/node_pattern_projection_effect/contract.yaml
@@ -32,18 +32,17 @@ node_type: "EFFECT_GENERIC"
 # Description
 description: >
   Effect node that publishes a materialized snapshot of all validated patterns whenever a pattern lifecycle
-  event is received (pattern-promoted, pattern-deprecated, pattern-lifecycle-transitioned). Queries the
-  full validated pattern set from the pattern store, builds a ModelPatternProjectionEvent snapshot, and
-  publishes it to onex.evt.omniintelligence.pattern-projection.v1. Emission is fire-and-forget — Kafka
-  failures are logged but do not fail the handler return. correlation_id is threaded from the triggering
-  event through to the snapshot payload. #magic___^_^___line
+  event is received (pattern-promoted, pattern-lifecycle-transitioned). Queries the full validated pattern
+  set from the pattern store, builds a ModelPatternProjectionEvent snapshot, and publishes it to onex.evt.omniintelligence.pattern-projection.v1.
+  Emission is fire-and-forget — Kafka failures are logged but do not fail the handler return. correlation_id
+  is threaded from the triggering event through to the snapshot payload. #magic___^_^___line
 # =============================================================================
 # I/O MODELS
 # =============================================================================
 input_model:
   name: "dict"
   module: "builtins"
-  description: "Raw lifecycle event payload dict (pattern-promoted, pattern-deprecated, or pattern-lifecycle-transitioned)"
+  description: "Raw lifecycle event payload dict (pattern-promoted or pattern-lifecycle-transitioned)"
 
 output_model:
   name: "ModelPatternProjectionEvent"
@@ -134,7 +133,6 @@ event_bus:
 
   subscribe_topics:
     - "onex.evt.omniintelligence.pattern-promoted.v1"
-    - "onex.evt.omniintelligence.pattern-deprecated.v1"
     - "onex.evt.omniintelligence.pattern-lifecycle-transitioned.v1"
 
   publish_topics:
@@ -144,9 +142,6 @@ event_bus:
     "onex.evt.omniintelligence.pattern-promoted.v1":
       schema_ref: "dict"
       description: "Pattern promoted lifecycle event (trigger for projection rebuild)"
-    "onex.evt.omniintelligence.pattern-deprecated.v1":
-      schema_ref: "dict"
-      description: "Pattern deprecated lifecycle event (trigger for projection rebuild)"
     "onex.evt.omniintelligence.pattern-lifecycle-transitioned.v1":
       schema_ref: "omniintelligence.nodes.node_pattern_lifecycle_effect.models.ModelPatternLifecycleTransitionedEvent"
       description: "Unified pattern lifecycle transition event (trigger for projection rebuild)"
