fix(review): [major/minor] atomic start-slot guard, log join timeout, document frozenset/shared-handler, fix logging import, update dispatch docstring, clarify .env.example host

--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,8 @@
 #
 # QUICK START:
 # 1. Copy this file to .env:  cp .env.example .env
-# 2. Add OMNIINTELLIGENCE_DB_URL=postgresql://postgres:<password>@localhost:5436/omniintelligence to .env
+# 2. Add OMNIINTELLIGENCE_DB_URL=postgresql://postgres:<password>@<host>:5436/omniintelligence to .env
+#    where <host> is 192.168.86.200 for the remote server or localhost for a local PostgreSQL instance.
 #    (this variable is not in this file; obtain credentials from your team lead)
 # 3. Run tests: pytest tests/integration -m integration -v
 #
@@ -17,8 +18,9 @@
 # PostgreSQL Database Configuration
 # =============================================================================
 # Single connection URL for the OmniIntelligence database.
-# Remote PostgreSQL server at 192.168.86.200 (OmniNode Bridge stack)
-# Port 5436 is the EXTERNAL port for host machine access.
+# Host options:
+#   - Remote server: 192.168.86.200:5436 (OmniNode Bridge stack, external port)
+#   - Local PostgreSQL container: localhost:5436
 #
 # REQUIRED: Replace <password> with the actual PostgreSQL password.
 # Contact your team lead or check secure credential storage.
