fix(OMN-2430): point omniintelligence DB references to correct per-service database (#140)
* fix(OMN-2430): rename OMNIINTELLIGENCE_DB_URL target from omninode_bridge to omniintelligence

The omniintelligence service must connect to its own service-specific database
('omniintelligence'), not the shared bridge database ('omninode_bridge').

- .env.example: OMNIINTELLIGENCE_DB_URL database → omniintelligence
- api/app.py: DatabaseSettings default DB name → omniintelligence
- learned_patterns.repository.yaml: connection string DB name → omniintelligence
- integration test fixtures/comments: update stale omninode_bridge references

* fix(OMN-2386): post-merge review improvements to NodeWatchdogEffect

Apply all review fixes that landed after the WatchdogEffect feature was
merged to main via PR #139. These address correctness, thread safety, and
test coverage gaps identified during local-review:

- handler_watchdog.py: non-blocking observer join, thread-safe registry,
  precise closed-loop RuntimeError guard, move payload construction inside
  try/except, document observer_factory caller contract
- observer_factory.py: guard against loop-closed race
- registry_watchdog_effect.py: threading.Lock protection, double-start guard,
  clear registry in finally block, remove dead get_publisher/register_publisher
- model_watchdog_config.py: tuple immutability for paths fields
- model_watchdog_result.py: frozen model corrections
- enum_watchdog_status.py: remove dead enum values
- contract.yaml: fix contradiction and orphaned comment
- node_tests/: expand governance invariants, coverage for empty paths,
  schedule coverage test
- test_contract_topics.py: update count 11→13 for new nodes
- test_dispatch_handlers.py: update handler/route counts (6→8, 8→10)
- test_plugin_dispatch.py: update handler/route counts (7→9, 11→13)
- pyproject.toml: align watchdog version floor

* fix(review): [major/minor] thread correlation_id through watchdog handlers; silence observer thread re-raise

- 

--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,9 @@
 #
 # QUICK START:
 # 1. Copy this file to .env:  cp .env.example .env
-# 2. Edit .env with your specific values (especially the <password> placeholder in OMNIINTELLIGENCE_DB_URL)
+# 2. Add OMNIINTELLIGENCE_DB_URL=postgresql://postgres:<password>@<host>:5436/omniintelligence to .env
+#    where <host> is 192.168.86.200 for the remote server or localhost for a local PostgreSQL instance.
+#    (this variable is not in this file; obtain credentials from your team lead)
 # 3. Run tests: pytest tests/integration -m integration -v
 #
 # IMPORTANT: The .env file contains secrets and should NEVER be committed.
@@ -16,13 +18,14 @@
 # PostgreSQL Database Configuration
 # =============================================================================
 # Single connection URL for the OmniIntelligence database.
-# Remote PostgreSQL server at 192.168.86.200 (OmniNode Bridge stack)
-# Port 5436 is the EXTERNAL port for host machine access.
+# Host options:
+#   - Remote server: 192.168.86.200:5436 (OmniNode Bridge stack, external port)
+#   - Local PostgreSQL container: localhost:5436
 #
 # REQUIRED: Replace <password> with the actual PostgreSQL password.
 # Contact your team lead or check secure credential storage.
 # DO NOT commit credentials to version control.
-OMNIINTELLIGENCE_DB_URL=postgresql://postgres:<password>@192.168.86.200:5436/omninode_bridge
+OMNIINTELLIGENCE_DB_URL=postgresql://postgres:<password>@192.168.86.200:5436/omniintelligence
 
 # Connection pool settings (optional, sensible defaults provided)
 POSTGRES_MIN_POOL_SIZE=2
